# prefr

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  AUTHORS.txt  CMakeLists.txt  Changelog.md  README.md
CMake/: CPackConfig.cmake  CudaCommonLibrary.cmake  Doxygen.cmake  FindCUDAThrust.cmake  FindPackages.cmake  FindnvidiaOpenGL.cmake  StandardConfig.cmake
doc/: Doxyfile.in
examples/: CMakeLists.txt  CShader.cpp  CShader.h  FPS.cpp  FPS.h  animation.cpp  collection.cpp  compositeosg.cpp  default.cpp  electric.cpp  gl.cpp  ogl.cpp  oglPick.cpp  osg.cpp  prefrExample.cpp  profile.cpp  qt.cpp  qtcompositeosg.cpp  shaderPath.h.in
particles/: DefaultParticleSystem.cpp  DefaultParticleSystem.h  DistanceArray.hpp  ElementCollection.hpp  InterpolationSet.hpp  Particle.h  ParticleDrawable.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticlePrototype.cpp  ParticlePrototype.h  ParticleRender.cpp  ParticleRender.h  ParticleRenderConfig.h  ParticleRenderer.h  ParticleSorter.cpp  ParticleSorter.h  ParticleSystem.cpp  ParticleSystem.h  ParticleUpdater.cpp  ParticleUpdater.h  RenderConfig.h  config.h  config.h.in  log.h  types.h
particles/GL/: CShader.h  GLDefaultParticleRenderer.cpp  GLDefaultParticleRenderer.h  GLDefaultParticleSorter.cpp  GLDefaultParticleSorter.h  GLDefaultParticleSystem.cpp  GLDefaultParticleSystem.h  GLTypes.h
particles/GL/shd/: GL-vert.glsl
particles/OSG/: OSGDefaultParticleRenderer.cpp  OSGDefaultParticleRenderer.h  OSGDefaultParticleSorter.cpp  OSGDefaultParticleSorter.h  OSGDefaultParticleSystem.cpp  OSGDefaultParticleSystem.h  OSGRenderConfig.h  OSGTypes.h
particles/cuda/: CUDAParticleSystem.cu  CUDAParticleSystem.cuh  CUDAThrustTypes.cuh  GLCUDAParticleRenderer.cu  GLCUDAParticleRenderer.cuh  ThrustParticleSorter.cpp  ThrustParticleSorter.cu  ThrustParticleSorter.cuh
particles/default/: CShader.h  DefaultParticleEmitter.cpp  DefaultParticleEmitter.h  DefaultParticleRenderConfig.cpp  DefaultParticleRenderConfig.h  DefaultParticleRenderer.cpp  DefaultParticleRenderer.h  DefaultParticleSorter.cpp  DefaultParticleSorter.h  DefaultParticleSystem.cpp  DefaultParticleSystem.h  DefaultParticleUpdater.cpp  DefaultParticleUpdater.h  DefaultTypes.h
particles/default/GL/: GLDefaultParticleRenderer.cpp  GLDefaultParticleRenderer.h  GLDefaultParticleSorter.cpp  GLDefaultParticleSorter.h  GLDefaultParticleSystem.cpp  GLDefaultParticleSystem.h  GLTypes.h
particles/default/OSG/: OSGDefaultParticleRenderer.cpp  OSGDefaultParticleRenderer.h  OSGDefaultParticleSorter.cpp  OSGDefaultParticleSorter.h  OSGDefaultParticleSystem.cpp  OSGDefaultParticleSystem.h  OSGTypes.h
particles/default/OSG/shd/: osg.frag  osg.vert  particle.vert
particles/default/cuda/: CUDAParticleSystem.cu  CUDAParticleSystem.cuh  CUDAThrustTypes.cuh  GLCUDAParticleRenderer.cu  GLCUDAParticleRenderer.cuh  ThrustParticleSorter.cu  ThrustParticleSorter.cuh
particles/default/shd/: particle-debug.vert  particle.frag
prefr/: CMakeLists.txt  Cluster.cpp  Cluster.h  Config.cpp  Config.h  DistanceArray.hpp  ElementCollection.hpp  Emitter.cpp  Emitter.h  InterpolationSet.hpp  Model.cpp  Model.h  Particle.h  ParticleDrawable.h  ParticleEmissionNode.cpp  ParticleEmissionNode.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticlePrototype.cpp  ParticlePrototype.h  ParticleRenderer.h  ParticleSorter.cpp  ParticleSorter.cpp.orig  ParticleSorter.h  ParticleSystem.cpp  ParticleSystem.h  ParticleUpdater.cpp  ParticleUpdater.h  Particles.cpp  Particles.h  RenderConfig.h  Renderer.cpp  Renderer.h  Sorter.cpp  Sorter.h  Source.cpp  Source.h  Timer.hpp  Updater.cpp  Updater.h  (+3 more)
prefr/GL/: GLAbstractRenderer.h  GLDefaultParticleRenderer.cpp  GLDefaultParticleRenderer.h  GLPickRenderer.cpp  GLPickRenderer.h  GLRenderConfig.h  GLRenderer.cpp  GLRenderer.h  IGLRenderProgram.h  OIGLRenderer.cpp  OIGLRenderer.h  RenderProgram.h
prefr/GL/shd/: GL-frag.glsl  GL-frag2.glsl  GLpick-frag.glsl  GLpick-vert.glsl
prefr/OSG/: OSGDefaultParticleRenderer.cpp  OSGDefaultParticleRenderer.h  OSGDefaultParticleSystem.cpp  OSGDefaultParticleSystem.h  OSGManager.cpp  OSGManager.h  OSGRenderConfig.h  OSGRenderer.cpp  OSGRenderer.h
prefr/OSG/shd/: osg-vert.glsl
prefr/core/: Cluster.cpp  Cluster.h  DistanceArray.hpp  ICamera.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  Particles.cpp  Particles.h  RenderConfig.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Sorter.cpp  Sorter.h  Source.cpp  Source.h  UpdateConfig.cpp  UpdateConfig.h  Updater.cpp  Updater.h
prefr/cuda/: CUDADistanceArray.cuh  ThrustParticleSorter.cu  ThrustParticleSorter.cuh  ThrustSorter.cu  ThrustSorter.cuh
prefr/utils/: Config.cpp  Config.h  ElementCollection.hpp  InterpolationSet.hpp  Log.cpp  Log.h  Timer.hpp  VectorizedSet.hpp  error.h  types.h
src/: InterpolationSet.hpp  Particle.cpp  Particle.h  ParticleRender.h  ParticleRenderConfig.h  ParticleSorter.h  ParticleSystem.h  ParticleUpdater.h  config.h  main.cpp
tools/profiling/: completeproftime.sh  extractTable.sh  framerate.sh  percentages.py  prof-gprof.sh  prof-valgrind.sh  proftime.sh
